Fixing build CSS and fix letter-spacing

--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -1,10 +1,20 @@
-
-html, button, input, select, textarea,
-.pure-g [class *= "pure-u"] {
-    /* Set your content font stack here: */
+/* @import url('https://fonts.googleapis.com/css?family=Ubuntu:400,300'); */
+body,html {
     font-family: 'Ubuntu', Georgia, Times, "Times New Roman", serif;
     font-weight: 300;
 }
+
+html, button, input, select, textarea,
+.pure-g [class *= "pure-u"] {
+    font-family: 'Ubuntu', Georgia, Times, "Times New Roman", serif;
+    font-weight: 300;
+}
+.pure-g > *{
+        letter-spacing: 0.01em;
+        font-family: 'Ubuntu', Georgia, Times, "Times New Roman", serif;
+        /* font-weight: 300; */
+}
+
 
 /*Menu Start*/
 
@@ -25,7 +35,7 @@ html, button, input, select, textarea,
 
 .custom-menu .pure-menu-link,
 .custom-menu .pure-menu-heading {
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Ubuntu', Georgia, Times, "Times New Roman", serif;
     font-weight: 400;
     color: #666;
 }
